[package]
name = "crayfish"
version = "0.2.0"
edition = "2021"

[dependencies]
libsignal-service = { git = "https://github.com/whisperfish/libsignal-service-rs.git", rev = "1508fa8f3561e3807aa8d073ca05a61346ae5a82" }
libsignal-service-hyper = { git = "https://github.com/whisperfish/libsignal-service-rs.git", rev = "1508fa8f3561e3807aa8d073ca05a61346ae5a82" }

actix-threadpool = "0.3"
aes = "0.7"
anyhow = "1.0"
async-trait = "0.1"
base64 = "0.13.0"
block-modes = "0.8.1"
dirs = "4.0.0"
failure = "0.1.8"
futures = "0.3"
log = "0.4.8"
phonenumber = "0.3"
prost = "0.11.0"
rand = "0.7.3"
serde = "1.0"
serde_json = "1.0"
serde-big-array = { version="0.3.2", features = ["const-generics"] }
serde_str = "0.1.0"
serde_yaml = "0.8"
tokio = { version= "1", features = ["full"] }
uuid = { version = "0.8", features = [ "serde" ] }
warp = "0.3"

hmac = "0.11.0"
sha2 = "0.9.0"
pbkdf2 = { version = "0.8.0", default-features = false }
sha-1 = "0.9.0"

[build-dependencies]
cpp_build = "0.5"
cc = "1.0"
failure = "0.1.6"
dotenv = "0.15"
regex = "1.3.9"
rstest = { version = "0.10" }
prost-build = { version = "0.11.1" }
protobuf-src = "1.0.5"
version_check = "0.9"

[patch.crates-io]
"curve25519-dalek" = { git = 'https://github.com/signalapp/curve25519-dalek', branch = 'lizard2' }
